data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4671.wast
;; 10. **Test Description**: Execute `call_indirect` where the intended function has a signature requiring specific types, but operands of incompatible types are provided, expecting a trap.     - **Constraint Checked**: Ensures operand types match expected signature types exactly.     - **Relation to `br_table` Edge Case**: Type mismatches on indices leading to branching, ensuring consistency in both `call_indirect` and `br_table` instruction behavior.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func (param f64)
      (call_indirect (type 0) (i32.const 0) (f64.const 1.0))
    )
  )
  "type mismatch"
)